--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         '<i style="background: #edc785; opacity: 0.9"></i><p><b>1.00 - 1.25</b></p>' +
         '<i style="background: #f59d4b; opacity: 0.9"></i><p><b>1.25 - 3.50</b></p>' +
         '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50+</b></p>'+
-        '<i class="fa fa-medkit"style="font-size:20px;color:#1d78c8;z-index: 1"></i><p><b>Health Facilities</b></p>';
+        '<i class="fas fa-circle"style="font-size:15px;color:#ffffff;z-index: 1"></i><p><b>Health Facilities</b></p>';
 
     var Sanitation_Coverage_legend= '<h7>Distance to Well Points (km)</h7></br></br>'+
         '<i style="background: #059931; opacity: 0.9"></i><p><b>0.1</p>'+
@@ -272,7 +272,7 @@
         '<i style="background: #edc785; opacity: 0.9"></i><p><b>1.00 - 1.25</b></p>' +
         '<i style="background: #f59d4b; opacity: 0.9"></i><p><b>1.25 - 3.50</b></p>' +
         '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50+</b></p>'+
-        '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1"></i><p><b>Well Points</b></p>';
+        '<i class="fas fa-circle"style="font-size:15px;color:#45a2e4;z-index: 1"></i><p><b>Well Points</b></p>';
 
 	
     // DECLARE STYLES FOR EACH LAYER
