--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             id: 'mapbox.Buildings_by_distance'
         }),Buildings_by_distance],
 
-        'Wells': [L.geoJson.ajax('assets/Wells1.geojson',{onEachFeature:popUp}, {
+        'Wells': [L.geoJson.ajax('assets/Wells1.geojson', {
            style: function(feature) {
         return {
             radius:6,
