--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
                     and only 65% of the rural population has access to improved water sources..</p>
                 <p style="font-size:18px;">Access to improved sanitation facilities ranges from 60% in urban areas to just 5% in rural areas .</p></br>
                 <img src="img/water.png" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
+               <!-- <div id="Sanitation" style="width: 500px; height: 300px"></div>-->
+            </section>
+			
+			<section data-scene="Wash2">
+                <h2>What's the cause of stunting?</h2>
+                <h4 style='font-weight: bolder' >Determinant 3: Poor Sanitation</h4></br>
                 <div id="Sanitation" style="width: 500px; height: 300px"></div>
             </section>
 
@@ -417,6 +423,7 @@
         Health_Service: {lat: 11.5799, lng: 43.1100, zoom: 14, layers: ['ESRI','Buildings_by_distance','Health_Facilites']},
 		Food_Security: {lat: 11.870, lng: 42.5000,zoom: 9, layers: ['Djibouti_adm0_n', 'Cropland']},
         Wash: {lat: 11.870, lng: 42.500, zoom: 9,layers: ['ESRI','Djibouti_adm0_m','Buildings_by_distance_wells','Wells']},
+		Wash2: {lat: 11.500, lng: 43.10, zoom: 12.3,layers: ['ESRI','Djibouti_adm0_m','Buildings_by_distance_wells','Wells']},
         end: {lat: 11.8077519, lng: 42.591565, zoom: 24,position: 'fullpage'}
     };
 
