--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div id="map" class="col-sm-6 col-md-8 sidebar"></div>
     </div>
     <!--add a scrolling down arrow-->
-    <!--<div class="animated zoomIn infinite glyphicon glyphicon-menu-down arrow-down"></div>-->
+    <div class="animated zoomIn infinite glyphicon glyphicon-menu-down arrow-down"></div>
 </div>
 
 
