--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     position:relative;
                     top: 40%;
                     text-align: center;
-                    font-size:60px;
+                    font-size:3.5vw;
                     background-color: hsla(78, 100%, 0%, 0.59);
                     padding-top: 20px;
                     padding-bottom: 15px;
@@ -101,8 +101,8 @@
             </section>
 
             <section data-scene="Problem_Stunting">
-                <h2>Problem of Stunting</h2></br>
-                <p style="font-size:18px;">Stunting is a major public health problem in Djibouti.
+                <h2 style="font-size:2vw;">Problem of Stunting</h2></br>
+                <p style="font-size:1vw;">Stunting is a major public health problem in Djibouti.
                     <strong>The current level of stunting in Djibouti is <font color="#D85B3C">30 percent</font></strong>, which exceeds the WHO severity thresholds of <font color="#5676B8">20 percent</font>.
                     The main causes of stunting in Djibouti include low access to and utilization to of basic health services,
                     high levels of food insecurity and poor environmental health (water, sanitation and hygiene). </p>
@@ -119,8 +119,8 @@
             </section>
 
             <section data-scene="Djibouti_Locating_Stu">
-                <h2>Stunting</h2></br>
-                <p style="font-size:18px;"><strong>All of the regions in Djibouti have critical levels of stunting</strong> (i.e. over 30 percent).
+                <h2 style="font-size:2vw;">Stunting</h2></br>
+                <p style="font-size:1vw;;"><strong>All of the regions in Djibouti have critical levels of stunting</strong> (i.e. over 30 percent).
                     The prevalence of stunting is <strong>higher among rural residents</strong>, compared to their urban counterparts (42.3% vs. 30.0%). 
                     <strong>Obock, Dikhil and Tadjourah</strong> regions have the highest stunting rates at 45.9%, 44.2% and 40.8%, respectively.</p></br>					
 				</br>
@@ -130,8 +130,8 @@
             </section>
 
             <section data-scene="Djibouti_Locating_Was">
-                <h2>Wasting</h2></br>
-                <p style="font-size:18px;"><strong>The current level of wasting in Djibouti is 17.8 percent</strong>, which exceeds the WHO severity thresholds of 5 percent. 
+                <h2 style="font-size:2vw;">Wasting</h2></br>
+                <p style="font-size:1vw;"><strong>The current level of wasting in Djibouti is 17.8 percent</strong>, which exceeds the WHO severity thresholds of 5 percent. 
                     </br></br>
                     <strong>All regions in Djibouti have critical levels of wasting (i.e. over 10 percent). Obock, Djibouti City and Tadjourah </strong>regions have the highest wasting rates at 25.7%, 17.9% and 16.4%, respectively. </p>
                  <div class="clearfix"></div>  
@@ -142,9 +142,9 @@
             </section>
 
             <section data-scene="Health_Service">
-                <h2>What's the cause of stunting?</h2>
-                <h4 style='font-weight: bolder' >Determinant 1: Quality/access to health services</h4></br>
-                <p style="font-size:18px;"><strong>Only 23% of women receive four or more antenatal care visits,</strong>
+                <h2 style="font-size:2vw;">What's the cause of stunting?</h2>
+                <h4 style='font-size:1.5vw;font-weight: bolder' >Determinant 1: Quality/access to health services</h4></br>
+                <p style="font-size:1vw;"><strong>Only 23% of women receive four or more antenatal care visits,</strong>
                     and just over half (54%) of women are receiving any form of postnatal care. Children
                     fully immunized by their first birthday ranges from 70% to 80% in urban areas and from 40% to 50% in rural areas.</p>
 					</br>
@@ -152,24 +152,24 @@
             </section>
 			
 			<section data-scene="Food_Security">
-                <h2>What's the cause of stunting?</h2>
-                <h4 style='font-weight: bolder' >Determinant 2: Food Security</h4></br>
-                <p style="font-size:18px;"><strong>Food insecurity is a persistent problem across Djibouti. With limited arable land, low rainfall and prolonged droughts, agriculture production and livelihoods are severely affected.</strong>
-				 <p style="font-size:18px;text-align: justify;">Agriculture is almost nonexistent, accounting only for about 3 percent of GDP and 2 percent of employment.</p>
-                        <p style="font-size:18px;text-align: justify;">Food insecurity high across the country, 75% of the rural population food insecure and 20% in Djibouti City.</p>
-                        <p style="font-size:18px;text-align: justify;">As a result, an alarmingly low percentage of children are consuming a minimum acceptable diet (i.e., at least four food groups and three meals per day) and getting the right nutrients to
+                <h2 style="font-size:2vw;">What's the cause of stunting?</h2>
+                <h4 style='font-size:1.5vw;font-weight: bolder' >Determinant 2: Food Security</h4></br>
+                <p style="font-size:1vw;"><strong>Food insecurity is a persistent problem across Djibouti. With limited arable land, low rainfall and prolonged droughts, agriculture production and livelihoods are severely affected.</strong>
+				 <p style="font-size:1vw;text-align: justify;">Agriculture is almost nonexistent, accounting only for about 3 percent of GDP and 2 percent of employment.</p>
+                        <p style="font-size:1vw;;text-align: justify;">Food insecurity high across the country, 75% of the rural population food insecure and 20% in Djibouti City.</p>
+                        <p style="font-size:1vw;text-align: justify;">As a result, an alarmingly low percentage of children are consuming a minimum acceptable diet (i.e., at least four food groups and three meals per day) and getting the right nutrients to
                             grow and thrive.</p></br>
                     <img src="img/arid2.JPG" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
                 </p>
             </section>
            
             <section data-scene="Wash">
-                <h2>What's the cause of stunting?</h2>
-                <h4 style='font-weight: bolder' >Determinant 3: Poor Sanitation</h4></br>
-                <p style="font-size:18px;">There are countrywide challenges in accessing improved water sources and sanitation.</p>
-                <p style="font-size:18px;">Only 47% of the population has access to improved sanitation facilities (5% in rural areas);
+                <h2 style="font-size:2vw;">What's the cause of stunting?</h2>
+                <h4 style='font-size:1.5vw;font-weight: bolder' >Determinant 3: Poor Sanitation</h4></br>
+                <p style="font-size:1vw;">There are countrywide challenges in accessing improved water sources and sanitation.</p>
+                <p style="font-size:1vw;">Only 47% of the population has access to improved sanitation facilities (5% in rural areas);
                     and only 65% of the rural population has access to improved water sources..</p>
-                <p style="font-size:18px;">Access to improved sanitation facilities ranges from 60% in urban areas to just 5% in rural areas .</p></br>
+                <p style="font-size:1vw;">Access to improved sanitation facilities ranges from 60% in urban areas to just 5% in rural areas .</p></br>
                 <img src="img/water.png" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;"></br>
                <div class="clearfix"></div>  
 					<div id="Sanitation" class="chart"></div>
@@ -201,7 +201,7 @@
                            width: 100%;
                            height: 100%;">
                         <p style="
-                    font-size:14px;
+                    font-size:1vw;
                     color:white;
                     text-align: justify;
                     background-color: hsla(78, 100%, 0%, 0.59);
@@ -234,7 +234,7 @@
 						padding-right: 20%;						   
                           ">
                         <p style="
-                    font-size:14px;
+                    font-size:1vw;
                     color:white;
                     text-align: justify;
                     background-color: hsla(78, 100%, 0%, 0.59);
@@ -266,7 +266,7 @@
 						   padding-right: 20%
                           ">
                         <p style="
-                    font-size:14px;
+                    font-size:1vw;
                     color:white;
                     text-align: justify;
                     background-color: hsla(78, 100%, 0%, 0.59);
