--- a/index.html
+++ b/index.html
@@ -168,11 +168,10 @@
                 <h4 style='font-size:1.5vw;font-weight: bolder' >Determinant 3: Poor Sanitation</h4></br>
                 <p style="font-size:1vw;">There are countrywide challenges in accessing improved water sources and sanitation.</p>
                 <p style="font-size:1vw;">Only 47% of the population has access to improved sanitation facilities (5% in rural areas);
-                    and only 65% of the rural population has access to improved water sources..</p>
+                    and only 65% of the rural population has access to improved water sources.</p>
                 <p style="font-size:1vw;">Access to improved sanitation facilities ranges from 60% in urban areas to just 5% in rural areas .</p></br>
                 <img src="img/water.png" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;"></br>
-               <div class="clearfix"></div>  
-					<div id="Sanitation" class="chart"></div>
+					<div id="Sanitation"></div>
 			  <!-- <div id="Sanitation" style="width: 500px; height: 300px"></div>-->
             </section>
 			
